Fix control bar on small screens

--- a/client/src/sass/player/_player-variables.scss
+++ b/client/src/sass/player/_player-variables.scss
@@ -12,4 +12,6 @@ $progress-margin: 10px;
 
 $dock-padding: 20px;
 
+$first-control-bar-element-margin-left: 1em;
+
 $assets-path: '../../assets/' !default;
